Change which things are "glitched" so they don't cause jittering

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     Current areas of expertise:
       <ol class="cyberpunk">
         <li>Web development [Both front-end and back-end aka. "Full-stack"]</li>
-        <li>Software integrations</li>
-        <li class="glitched">Software project leadership [Requirements analysis, feasibility, research, code management, architecture, release planning, technical resource management, risk analysis, change management/communications, etc]</li>
+        <li class="glitched">Software integrations</li>
+        <li>Software project leadership [Requirements analysis, feasibility, research, code management, architecture, release planning, technical resource management, risk analysis, change management/communications, etc]</li>
         <li>Web and Data analytics [Google Analytics, Hotjar, Google Tag Manager (GTM)]</li>
-        <li class="glitched">Adobe Experience Manager (AEM) [Java Enterprise Content Management System (CMS)]</li>
+        <li>Adobe Experience Manager (AEM) [Java Enterprise Content Management System (CMS)]</li>
         <li>Flutter mobile app development [Android, iOS]</li>
-        <li>Software architecture</li>
+        <li class="glitched">Software architecture</li>
         <li>Data Visualization and Web Graphics for data communication</li>
         <li>Diverse framework, language, database and platform support.</li>
       </ol>
